Using Bodypart ENUM for algorithm, and also created an Equipment ENUM